fix: spacing updates / fixes  (#350)
* fix: spacing updates / fixes

* fix: paragraph aside, blockquote spacing inside columns

* chore: update spacing on aside

* fix: update aside docs

* chore: remove extra classname

* chore: remove extra classname

* chore: whitespace

--- a/packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
@@ -4,7 +4,10 @@
 .paragraph {
   @include carbon--type-style('body-long-02');
   margin-bottom: $spacing-06;
-  padding-right: $spacing-07;
+
+  @include carbon--breakpoint('md') {
+    padding-right: $spacing-07;
+  }
 }
 
 // Responsive by default
@@ -25,7 +28,11 @@
 
 // If paragraph is inside a user specified row then allow the grid code to set the width
 :global(.#{$prefix}--row) .paragraph {
-  width: calc(100% - 1rem);
+  width: 100%;
+
+  @include carbon--breakpoint('md') {
+    padding-right: $spacing-07;
+  }
 }
 
 //---------------------------------------
@@ -91,14 +98,19 @@
 // Blockquote
 //---------------------------------------
 .blockquote {
-  margin: $spacing-08 0 $spacing-08 $spacing-08;
+  margin: $spacing-08 0;
   color: $carbon--blue-60;
   font-style: italic;
+
+  @include carbon--breakpoint('md') {
+    margin-left: $spacing-08;
+  }
 }
 
 .blockquote .paragraph {
   @include carbon--type-style('expressive-heading-03', true);
   margin-bottom: 0;
+  width: 100%;
 }
 
 .blockquote .paragraph--responsive {
@@ -115,7 +127,11 @@
 
 // If quote is inside a user specified row then allow the grid code to set the width
 :global(.#{$prefix}--row) .blockquote .paragraph {
-  width: calc(100% - 3rem);
+  padding-right: 0;
+
+  @include carbon--breakpoint('md') {
+    width: 100%;
+  }
 }
 
 .blockquote cite {
